side menu made. functions need to be added

--- a/Run.html
+++ b/Run.html
@@ -21,6 +21,7 @@
     <link href="./Run/Common1.css" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 
+    <script src="./script.js"></script>
 
     <link rel="stylesheet" type="text/css" media="(min-width: 980px)" href="./Run/screen-media.min.css">
     <link rel="stylesheet" type="text/css" media="(min-width: 480px) and (max-width: 980px)" href="./Run/tablet-media.min.css">
