atna host res done at 480

--- a/content.html
+++ b/content.html
@@ -289,19 +289,19 @@
             </a>
             <div class="rest">
                 <div class="layer2">
-                    <a href="#" class="item">
+                    <a href="#" class="item one">
                         <div class="img one"></div>
                         <span>ورود اعضاء</span>
                     </a>
-                    <a href="#" class="item">
+                    <a href="#" class="item two">
                         <div class="img two"></div>
                         <span>صفحه نخست</span>
                     </a>
-                    <a href="#" class="item">
+                    <a href="#" class="item three">
                         <div class="img three"></div>
                         <span>تماس با ما</span>
                     </a>
-                    <a href="#" class="item">
+                    <a href="#" class="item four">
                         <div class="img four"></div>
                         <span>تقویم آموزشی</span>
                     </a>
