resItemBar and slider added at res 480

--- a/content.html
+++ b/content.html
@@ -596,6 +596,15 @@
     <span>همیشه میزبان شماییم</span>
 </a>
 
+<div id="resItemBar">
+    <a href="#">دوره‌های آموزشی</a>
+    <a href="#">آموزش گام به گام</a>
+    <a href="#">فیلم‌های آموزشی</a>
+    <a href="#">کتابخانه</a>
+    <a href="#">درباره ما</a>
+    <a href="#">همکاری با ما</a>
+</div>
+
 <section class="outlet">
 
     <section class="mainPageSection">
