four steps pics and effects done

--- a/content.html
+++ b/content.html
@@ -619,6 +619,7 @@
                     <div class="coloredWrapper">
                         <div class="colored"><span class="step"> گام اول</span></div>
                     </div>
+                    <div class="image"></div>
                     <div class="hover">می‌توانید با بهره‌مندی از تجارب مشاوران و مدرسان حرفه‌ای، دوره مناسب آموزش
                         برنامه‌نویسی را انتخاب نمایید.</div>
                     <div class="text">مشاوره</div>
@@ -629,6 +630,7 @@
                     <div class="coloredWrapper">
                         <div class="colored"><span class="step"> گام دوم</span></div>
                     </div>
+                    <div class="image"></div>
                     <div class="hover">آموزشگاه برنامه‌نویسی تحلیل‌داده محیط عملی را با برترین اساتید برنامه‌نویسی و
                         دیتابیس در ایران، همراه با لابراتوار مجهز در اختیار شما قرار می‌دهد.</div>
                     <div class="text">ثبت نام</div>
@@ -639,6 +641,7 @@
                     <div class="coloredWrapper">
                         <div class="colored"><span class="step"> گام سوم</span></div>
                     </div>
+                    <div class="image"></div>
                     <div class="hover">با شرکت در کلاسهای آموزش برنامه‌نویسی، به تجربه‌ای عملی در محیطی علمی دست خواهید
                         یافت و از برنامه‌ای بی‌نظیر بهره‌مند خواهید شد.</div>
                     <div class="text">شرکت در کلاس</div>
@@ -649,6 +652,7 @@
                     <div class="coloredWrapper">
                         <div class="colored"><span class="step"> گام چهارم</span></div>
                     </div>
+                    <div class="image"></div>
                     <div class="hover">پشتیبانی علمی و عملی از دانشجویان پس از پایان دوره از تعهدات ماست. تا زمان احساس
                         موفقیتتان در کنار شما خواهیم بود.</div>
                     <div class="text">پشتیبانی رایگان</div>
