Sign up button keepted in tablet size
and calendar excess margin deleted. (restructured actually!)

--- a/content.html
+++ b/content.html
@@ -317,10 +317,7 @@
             <a href="#" class="FatLIne CircleBase M-50">
                 <div class="Circle-1 M-50"></div>
                 <div class="Circle-2 M-50"></div>
-                <div class="Circle-3 M-50">
-                    <div class="calendar"></div>
-                    <div class="calendarText">تقویم آموزشی</div>
-                </div>
+                <div class="Circle-3 M-50"> <div class="calendar"></div> <div class="calendarText">تقویم آموزشی</div> </div>
             </a>
         </div>
         <div class="title">
