res menu compelete

--- a/content.html
+++ b/content.html
@@ -1,88 +1,23 @@
-
 <div id="resMenu">
     <i class="fas fa-times" onclick="closeResMenu()"></i>
-    <div class="content">
+    <div class="OriginContent">
         <div class="logo"></div>
         <a href="#" class="hollowButton ">ورود/ثبت نام</a>
         <ul class="mainNav">
-            <li class="item"><a class="collapsible" href="#">دوره‌های آموزشی</a>
+            <li class="item">
+                <div class="collapsible">دوره‌های آموزشی</div>
                 <ul class="content">
-                    <li><a href="#">نمونه دوره</a>
-                        <ul class="InnerNav">
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">نمونه دوره</a>
-                        <ul class="InnerNav">
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">نمونه دوره</a>
-                        <ul class="InnerNav">
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">نمونه دوره</a>
-                        <ul class="InnerNav">
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">نمونه دوره</a>
-                        <ul class="InnerNav">
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">نمونه دوره</a>
-                        <ul class="InnerNav">
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                            <li><a href="#">نمونه دوره لایه دو</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">نمونه دوره</a></li>
-                    <li><a href="#">نمونه دوره</a></li>
-                    <li><a href="#">نمونه دوره</a></li>
-                    <li><a href="#">نمونه دوره</a></li>
-                    <li><a href="#">نمونه دوره</a></li>
-                    <li><a href="#">نمونه دوره</a></li>
+                    <li class="courseSelector" data-linkTo="course1">نمونه دوره 1</a> </li>
+                    <li class="courseSelector" data-linkTo="course2">نمونه دوره 2</a> </li>
+                    <li class="courseSelector" data-linkTo="course3">نمونه دوره 3</a> </li>
+                    <li class="courseSelector" data-linkTo="course4">نمونه دوره 4</a> </li>
+                    <li class="courseSelector" data-linkTo="course5">نمونه دوره 5</a> </li>
                 </ul>
+
             </li>
             <li class="item"><a href="#">آموزش گام به گام</a></li>
-            <li class="item"><a class="collapsible" href="#">فیلم‌های آموزشی</a>
+            <li class="item">
+                <div class="collapsible">فیلم‌های آموزشی</div>
                 <ul class="content">
                     <li><a href="#"> نمونه فیلم</a></li>
                     <li><a href="#"> نمونه فیلم</a></li>
@@ -110,7 +45,8 @@
                     <li><a href="#"> نمونه فیلم</a></li>
                 </ul>
             </li>
-            <li class="item"><a class="collapsible" href="#">پروژه‌ها</a>
+            <li class="item">
+                <div class="collapsible">پروژه‌ها</div>
                 <ul class="content">
                     <li><a href="#"> نمونه پروژه</a></li>
                     <li><a href="#"> نمونه پروژه</a></li>
@@ -138,7 +74,8 @@
                     <li><a href="#"> نمونه پروژه</a></li>
                 </ul>
             </li>
-            <li class="item"><a class="collapsible" href="#">کتابخانه</a>
+            <li class="item">
+                <div class="collapsible">کتابخانه</div>
                 <ul class="content">
                     <li><a href="#" data-count="22"> نمونه کتاب</a></li>
                     <li><a href="#" data-count="5"> نمونه کتاب</a></li>
@@ -161,7 +98,8 @@
                     <li><a href="#" data-count="22"> نمونه کتاب</a></li>
                 </ul>
             </li>
-            <li class="item"><a class="collapsible" href="#">کامپوننت</a>
+            <li class="item">
+                <div class="collapsible">کامپوننت</div>
                 <ul class="content">
                     <li><a href="#"> نمونه کامپوننت</a></li>
                     <li><a href="#"> نمونه کامپوننت</a></li>
@@ -189,7 +127,8 @@
                     <li><a href="#"> نمونه کامپوننت</a></li>
                 </ul>
             </li>
-            <li class="item"><a class="collapsible" href="#">قالب</a>
+            <li class="item">
+                <div class="collapsible">قالب</div>
                 <ul class="content">
                     <li><a href="#"> نمونه قالب</a></li>
                     <li><a href="#"> نمونه قالب</a></li>
@@ -217,8 +156,11 @@
                     <li><a href="#"> نمونه قالب</a></li>
                 </ul>
             </li>
-            <li class="item"><a href="#">برنامه</a></li>
-            <li class="item"><a class="collapsible" href="#">اخبار</a>
+            <li class="item">
+                <div class="collapsible">برنامه</div>
+            </li>
+            <li class="item">
+                <div class="collapsible">اخبار</div>
                 <ul class="content">
                     <li><a href="#"> نمونه خبر</a></li>
                     <li><a href="#"> نمونه خبر</a></li>
@@ -246,6 +188,54 @@
                     <li><a href="#"> نمونه خبر</a></li>
                 </ul>
             </li>
+        </ul>
+    </div>
+    <div class="crossContent">
+        <i class="fas fa-arrow-right" onclick="navigateBackToRes()"></i>
+        <ul class="InnerNav noDisplay" id="course1">
+            <li><a href="#">نمونه دوره لایه دو 1</a></li>
+            <li><a href="#">نمونه دوره لایه دو 1</a></li>
+            <li><a href="#">نمونه دوره لایه دو 1</a></li>
+            <li><a href="#">نمونه دوره لایه دو 1</a></li>
+            <li><a href="#">نمونه دوره لایه دو 1</a></li>
+            <li><a href="#">نمونه دوره لایه دو 1</a></li>
+            <li><a href="#">نمونه دوره لایه دو 1</a></li>
+        </ul>
+        <ul class="InnerNav noDisplay" id="course2">
+            <li><a href="#">نمونه دوره لایه دو 2</a></li>
+            <li><a href="#">نمونه دوره لایه دو 2</a></li>
+            <li><a href="#">نمونه دوره لایه دو 2</a></li>
+            <li><a href="#">نمونه دوره لایه دو 2</a></li>
+            <li><a href="#">نمونه دوره لایه دو 2</a></li>
+            <li><a href="#">نمونه دوره لایه دو 2</a></li>
+            <li><a href="#">نمونه دوره لایه دو 2</a></li>
+        </ul>
+        <ul class="InnerNav noDisplay" id="course3">
+            <li><a href="#">نمونه دوره لایه دو 3</a></li>
+            <li><a href="#">نمونه دوره لایه دو 3</a></li>
+            <li><a href="#">نمونه دوره لایه دو 3</a></li>
+            <li><a href="#">نمونه دوره لایه دو 3</a></li>
+            <li><a href="#">نمونه دوره لایه دو 3</a></li>
+            <li><a href="#">نمونه دوره لایه دو 3</a></li>
+            <li><a href="#">نمونه دوره لایه دو 3</a></li>
+        </ul>
+        <ul class="InnerNav noDisplay" id="course4">
+            <li><a href="#">نمونه دوره لایه دو 4</a></li>
+            <li><a href="#">نمونه دوره لایه دو 4</a></li>
+            <li><a href="#">نمونه دوره لایه دو 4</a></li>
+            <li><a href="#">نمونه دوره لایه دو 4</a></li>
+            <li><a href="#">نمونه دوره لایه دو 4</a></li>
+            <li><a href="#">نمونه دوره لایه دو 4</a></li>
+            <li><a href="#">نمونه دوره لایه دو 4</a></li>
+        </ul>
+        <ul class="InnerNav noDisplay" id="course5">
+            <li><a href="#">نمونه دوره لایه دو 5</a></li>
+            <li><a href="#">نمونه دوره لایه دو 5</a></li>
+            <li><a href="#">نمونه دوره لایه دو 5</a></li>
+            <li><a href="#">نمونه دوره لایه دو 5</a></li>
+            <li><a href="#">نمونه دوره لایه دو 5</a></li>
+            <li><a href="#">نمونه دوره لایه دو 5</a></li>
+            <li><a href="#">نمونه دوره لایه دو 5</a></li>
         </ul>
     </div>
 </div>
@@ -317,7 +307,10 @@
             <a href="#" class="FatLIne CircleBase M-50">
                 <div class="Circle-1 M-50"></div>
                 <div class="Circle-2 M-50"></div>
-                <div class="Circle-3 M-50"> <div class="calendar"></div> <div class="calendarText">تقویم آموزشی</div> </div>
+                <div class="Circle-3 M-50">
+                    <div class="calendar"></div>
+                    <div class="calendarText">تقویم آموزشی</div>
+                </div>
             </a>
         </div>
         <div class="title">
@@ -3528,3 +3521,5 @@
     </div>
 
 </footer>
+
+<script src="./script.js"></script>
