--- a/content.html
+++ b/content.html
@@ -2,7 +2,6 @@
     <i class="fas fa-times" onclick="closeResMenu()"></i>
     <div class="OriginContent">
         <div class="logo"></div>
-        <a href="#" class="hollowButton ">ورود/ثبت نام</a>
         <ul class="mainNav">
             <li class="item">
                 <div class="collapsible">دوره‌های آموزشی</div>
@@ -189,6 +188,15 @@
                 </ul>
             </li>
         </ul>
+        <div class="line"></div>
+        <a href="#" class="hollowButton ">ورود/ثبت نام</a>
+        <div class="social">
+            <span>مارا در شبکه های اجتماعی دنبال کنید</span>
+            <div class="icons">
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-instagram"></a>
+            </div>
+        </div>
     </div>
     <div class="crossContent">
         <i class="fas fa-arrow-right" onclick="navigateBackToRes()"></i>
@@ -293,7 +301,7 @@
                     </a>
                     <a href="#" class="item four">
                         <div class="img four"></div>
-                        <span>تقویم آموزشی</span>
+                        <span>همکاری با ما</span>
                     </a>
                 </div>
                 <div class="inputWrapper">
@@ -576,7 +584,7 @@
             </div>
         </aside>
         <div class="slider">
-            <div class="pic">This is Slider</div>
+            <img src="./images/img/HomeSlider1.png" alt="">
         </div>
     </div>
 </header>
