footer links fix

--- a/content.html
+++ b/content.html
@@ -3518,13 +3518,11 @@
             </nav>
         </div>
         <div class="layer3">
-            <div class="footerImage one"></div>
-            <div class="footerImage two"></div>
-            <div class="footerImage three"></div>
-            <div class="footerImage four"></div>
-            <div class="footerImage five"></div>
-            <div class="footerImage six"></div>
-            <div class="footerImage seven"></div>
+            <a target="_blank" href="https://www.youtube.com/user/tahlildadeh" class="footerImage two"></a>
+            <a target="_blank" href="https://www.instagram.com/tahlildadeh" class="footerImage three"></a>
+            <a target="_blank" href="https://www.linkedin.com/company/%D8%A2%D9%85%D9%88%D8%B2%D8%B4%DA%AF%D8%A7%D9%87-%D8%AA%D8%AD%D9%84%DB%8C%D9%84-%D8%AF%D8%A7%D8%AF%D9%87/about/" class="footerImage five"></a>
+            <a target="_blank" href="https://chatwith.io/s/tahlildadeh" class="footerImage six"></a>
+            <a target="_blank" href="https://t.me/tahlildadeh" class="footerImage seven"></a>
         </div>
     </div>
 
