top bar social icons fixed and links added to them

--- a/content.html
+++ b/content.html
@@ -263,11 +263,11 @@
             </div>
         </div>
         <div class="center">
-            <a href="#" class="fab fa-youtube"></a>
-            <a href="#" class="fab fa-instagram"></a>
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-linkedin-in"></a>
-            <a href="#" class="fab fa-twitter"></a>
+            <a target="_blank" class="fab fa-youtube" href="https://www.youtube.com/user/tahlildadeh" ></a>
+            <a target="_blank" class="fab fa-instagram" href="https://www.instagram.com/tahlildadeh" ></a>
+            <a target="_blank" class="fab fa-linkedin-in" href="https://www.linkedin.com/company/%D8%A2%D9%85%D9%88%D8%B2%D8%B4%DA%AF%D8%A7%D9%87-%D8%AA%D8%AD%D9%84%DB%8C%D9%84-%D8%AF%D8%A7%D8%AF%D9%87/about/"></a>
+            <a target="_blank" class="fab fa-whatsapp" href="https://chatwith.io/s/tahlildadeh" ></a>
+            <a target="_blank" class="fab fa-telegram-plane" href="https://t.me/tahlildadeh" ></a>
 
         </div>
         <div class="left" data-onClick="active">
