--- a/content.html
+++ b/content.html
@@ -588,8 +588,17 @@
                 <a href="#" class="pillButton">مشتریان ما</a>
             </div>
         </aside>
-        <div class="slider">
-            <img src="./images/img/HomeSlider1.png" alt="">
+        <div id="slider" data-timeout="4000">
+            <div class="images">
+                <img src="./images/img/homeSlider-react-4.png" alt="">
+                <img src="./images/img/homeSlider-DDD-3.png" alt="">
+                <img class="active" src="./images/img/homeSlider-Python.png" alt="">
+                <img src="./images/img/homeSlider-NodeJS-3.png" alt="">
+            </div>
+            <i class="fas fa-angle-right" id="sliderNext"></i>
+            <i class="fas fa-angle-left" id="sliderPre"></i>
+            <div class="dots">
+            </div>
         </div>
     </div>
 </header>
