profile button ready

--- a/content.html
+++ b/content.html
@@ -6,11 +6,11 @@
             <li class="item">
                 <div class="collapsible">دوره‌های آموزشی</div>
                 <ul class="content">
-                    <li class="courseSelector" data-linkTo="course1">نمونه دوره 1</a> </li>
-                    <li class="courseSelector" data-linkTo="course2">نمونه دوره 2</a> </li>
-                    <li class="courseSelector" data-linkTo="course3">نمونه دوره 3</a> </li>
-                    <li class="courseSelector" data-linkTo="course4">نمونه دوره 4</a> </li>
-                    <li class="courseSelector" data-linkTo="course5">نمونه دوره 5</a> </li>
+                    <li class="courseSelector" data-linkTo="course1">نمونه دوره 1 </li>
+                    <li class="courseSelector" data-linkTo="course2">نمونه دوره 2 </li>
+                    <li class="courseSelector" data-linkTo="course3">نمونه دوره 3 </li>
+                    <li class="courseSelector" data-linkTo="course4">نمونه دوره 4 </li>
+                    <li class="courseSelector" data-linkTo="course5">نمونه دوره 5 </li>
                 </ul>
 
             </li>
@@ -286,10 +286,18 @@
             <a href="#" class="logo"></a>
         </div>
         <div class="header">
-            <a href="#" class="signupButtonLayer">
+            <!-- <a href="#" class="signupButtonLayer">
                 <div class="click"></div>
                 <button class="orangeButton  alt">ثبت نام</button>
-            </a>
+            </a> -->
+            <div class="signupButtonLayer" data-onClick="active">
+                <div class="click"></div>
+                <a href="#" class="orangeButton  alt">پروفایل</a>
+                <div class="content">
+                    <a href="#">ورود به پنل مدیریت</a>
+                    <a href="#">خروج</a>
+                </div>
+            </div>
             <div class="rest">
                 <div class="layer2">
                     <a href="#" class="item one">
