prfile/signup added

--- a/content.html
+++ b/content.html
@@ -248,6 +248,8 @@
     </div>
 </div>
 
+<div class="ad"></div>
+
 <header class="header">
     <div class="topBar">
         <span class="menu" id="resOpen">☰</span>
@@ -286,10 +288,18 @@
             <a href="#" class="logo"></a>
         </div>
         <div class="header">
+            <!-- <div class="user">
+                سلام پویان سلمانی
+                <a href="#" class="signupButtonLayer">
+                    <div class="click"></div>
+                    <button class="orangeButton  alt">پروفایل</button>
+                </a>
+            </div> -->
             <a href="#" class="signupButtonLayer">
                 <div class="click"></div>
                 <button class="orangeButton  alt">ثبت نام</button>
             </a>
+
             <div class="rest">
                 <div class="layer2">
                     <a href="#" class="item one">
